--- a/app/src/main/res/layout/activity_main_layout.xml
+++ b/app/src/main/res/layout/activity_main_layout.xml
@@ -1,9 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     tools:context=".ui.MainActivity">
+
+<!--    占位图-->
+    <ImageView
+        android:id="@+id/image"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+    </ImageView>
 
     <com.mgx.mbanner.custom.MBanner
         android:id="@+id/banner"
@@ -11,4 +19,4 @@
         android:layout_height="260dp">
 
     </com.mgx.mbanner.custom.MBanner>
-</LinearLayout>
+</FrameLayout>
