视频图片混播控件1.0.1-->提交指示器代码 待完善

--- a/app/src/main/res/layout/activity_main_layout.xml
+++ b/app/src/main/res/layout/activity_main_layout.xml
@@ -11,10 +11,15 @@
         android:layout_width="match_parent"
         android:layout_height="260dp"
         app:imgDelay="2000"
+        app:indicatorHeight="5dp"
+        app:indicatorNotSelectedBackgroundColor="@color/colorAccent"
         app:indicatorPosition="right"
+        app:indicatorStrokeWidth="1dp"
+        app:indicatorWidth="5dp"
         app:isAutomaticVideoPlayback="true"
         app:isDisplayIndicator="true"
         app:isVideoCaching="true"
+        app:isVideoController="false"
         app:loadingErrorPicture="@mipmap/err"
         app:showOccupationMap="@mipmap/seat"
         app:watermarkLocation="bottom">
