--- a/app/src/main/res/layout/activity_main_layout.xml
+++ b/app/src/main/res/layout/activity_main_layout.xml
@@ -16,12 +16,13 @@
         app:indicatorPosition="right"
         app:indicatorStrokeWidth="1dp"
         app:indicatorWidth="5dp"
-        app:isAutomaticVideoPlayback="true"
         app:isDisplayIndicator="true"
         app:isVideoCaching="true"
         app:isVideoController="false"
         app:loadingErrorPicture="@mipmap/err"
         app:showOccupationMap="@mipmap/seat"
+        app:isPreloading="true"
+        app:preloadingPages="1"
         app:watermarkLocation="bottom">
 
     </com.mgx.mbanner.custom.MBanner>
