视频图片混播控件1.0.1-->代码更新

--- a/app/src/main/res/layout/activity_main_layout.xml
+++ b/app/src/main/res/layout/activity_main_layout.xml
@@ -17,13 +17,15 @@
         app:indicatorStrokeWidth="1dp"
         app:indicatorWidth="5dp"
         app:isDisplayIndicator="true"
+        app:isPreloading="true"
         app:isVideoCaching="true"
         app:isVideoController="false"
         app:loadingErrorPicture="@mipmap/err"
-        app:showOccupationMap="@mipmap/seat"
-        app:isPreloading="true"
         app:preloadingPages="1"
-        app:watermarkLocation="bottom">
+        app:showOccupationMap="@mipmap/seat"
+        app:watermarkLocation="bottom"
+        app:watermarkTextColor="@color/colorAccent"
+        app:watermarkTextSize="10sp">
 
     </com.mgx.mbanner.custom.MBanner>
 </FrameLayout>
