--- a/app/src/main/res/layout/activity_main_layout.xml
+++ b/app/src/main/res/layout/activity_main_layout.xml
@@ -11,13 +11,9 @@
         android:layout_width="match_parent"
         android:layout_height="260dp"
         app:imgDelay="2000"
-        app:indicatorHeight="5dp"
-        app:indicatorNotSelectedBackgroundColor="@color/colorAccent"
-        app:indicatorPosition="right"
-        app:indicatorStrokeWidth="1dp"
-        app:indicatorWidth="5dp"
-        app:isDisplayIndicator="true"
+        app:indicatorPosition="left"
         app:isPreloading="true"
+        app:indicatorStyle="ORDINARY"
         app:isVideoCaching="true"
         app:isVideoController="false"
         app:loadingErrorPicture="@mipmap/err"
